# Senpai-Sama7

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  DOCUMENTATION.md  FEATURE_SUMMARY.md  LICENSE_HEADER.txt  README.md  SETUP.md  VISUAL_PREVIEW.md  collaboration.md  index.html  jest.config.js  package.json  pyproject.toml  pytest.ini  recruiter.md  requirements.txt  tsconfig.json
.github/workflows/: activity.yml  ci.yml  generate-assets.yml  metrics.yml  radar.yml  snake.yml  sparkline.yml
config/: default.json
generators/: README.md  activity_sparkline.py  energy_matrix.py  radial_skills.py
scripts/: gen_radar.js  gen_radar.ts  gen_sparkline.py
tests/: setup.ts  test_radar.test.ts  test_sparkline.py
