[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senpai-sama7-profile"
version = "1.0.0"
description = "Professional GitHub profile repository with automated metrics and visualizations"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Senpai-Sama7", email = "contact@senpai-sama7.dev"}
]
maintainers = [
    {name = "Senpai-Sama7", email = "contact@senpai-sama7.dev"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]
keywords = ["github", "profile", "visualization", "svg", "sparkline", "metrics"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "dataclasses>=0.6;python_version<'3.7'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "black>=23.7.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "mypy>=1.5.0,<2.0.0",
    "isort>=5.12.0,<6.0.0",
    "bandit>=1.7.5,<2.0.0",
    "pre-commit>=3.3.0,<4.0.0",
    "tox>=4.6.0,<5.0.0"
]
docs = [
    "sphinx>=7.1.0,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0"
]
performance = [
    "memory-profiler>=0.61.0,<1.0.0",
    "psutil>=5.9.0,<6.0.0"
]
security = [
    "cryptography>=41.0.0,<42.0.0",
    "certifi>=2023.7.22"
]
image = [
    "Pillow>=10.0.0,<11.0.0",
    "lxml>=4.9.3,<5.0.0"
]

[project.urls]
Homepage = "https://github.com/senpai-sama7/senpai-sama7"
Repository = "https://github.com/senpai-sama7/senpai-sama7.git"
Documentation = "https://github.com/senpai-sama7/senpai-sama7#readme"
"Bug Tracker" = "https://github.com/senpai-sama7/senpai-sama7/issues"
Changelog = "https://github.com/senpai-sama7/senpai-sama7/blob/main/CHANGELOG.md"

[project.scripts]
gen-sparkline = "scripts.gen_sparkline:main"

# Tool configurations

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["scripts", "tests"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html:coverage/html",
    "--cov-report=xml:coverage/coverage.xml",
    "--cov-fail-under=80",
    "--junit-xml=coverage/junit.xml"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests that require API access",
    "network: marks tests that require network access"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["scripts"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "coverage/html"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_process_args for CLI tools

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".tox"
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101,S106"
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,py312,lint,security,docs
isolated_build = true

[testenv]
deps = 
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-mock>=3.11.0
commands = pytest {posargs}

[testenv:lint]
deps = 
    black
    isort
    flake8
    mypy
    types-requests
commands = 
    black --check scripts tests
    isort --check-only scripts tests
    flake8 scripts tests
    mypy scripts

[testenv:security]
deps = bandit[toml]
commands = bandit -r scripts -f json -o security-report.json

[testenv:docs]
deps = 
    sphinx
    sphinx-rtd-theme
commands = sphinx-build -W -b html docs docs/_build/html

[testenv:format]
deps = 
    black
    isort
commands = 
    black scripts tests
    isort scripts tests
"""